# qcn

./: .gitignore  Makefile.am  Makefile.incl  README.md  README.rst  build-linux-libs.sh  build.mac  build_android_arm.sh  config.h  configure.ac  curl-build.mac  libtool  version.h  version.h.bak
bzip2-1.0.6/: build.mac
client/graphics/: Makefile.am  qcn_graphics.cpp
client/mac_build/: qcn-Info.plist  qcn_graphics-Info.plist  qcnlive-Info.plist  qcnusb-Info.plist
client/mac_build/qcn.xcodeproj/: project.pbxproj
client/main/: Makefile.am  Makefile.am.ARM  Makefile.am.LINUX  define.h  main.cpp  main.h  qcn_shmem.h  qcn_thread_time.cpp  qcndemo.cpp
client/qcnlive/: Info.plist  Info.plist.mac  Makefile.mac  QCNLive.pro  myframe.cpp
client/qcnlive/QCNLive.xcodeproj/: project.pbxproj
client/qcnlive/QCNLive.xcodeproj/xcshareddata/xcschemes/: qcnlive.xcscheme
client/qcnusb/install/: qcnusb
client/win_build/: boinc_lib.vcxproj  boinc_lib.vcxproj.filters  libcurl.vcproj  libcurl.vcxproj  libcurl.vcxproj.filters  qcn.sln  qcn_graphics.vcxproj
curl-7.49.1/: build.mac  errno_mac.h
curl-7.49.1/lib/: curl_setup_once.h
doc/: README-server.txt
freetype-2.6/: build.mac
ftgl-2.1.3/: Makefile  build.mac  config.status  libtool
ftgl-2.1.3/docs/: Makefile
ftgl-2.1.3/msvc/vc8/: ftgl_static.vcxproj
ftgl-2.1.3/src/: Makefile
libpng-1.6.23/: build.mac  pngread.c  pngwrite.c
libpng-1.6.23/contrib/libtests/: pngimage.c  pngstest.c
libpng-1.6.23/contrib/tools/: pngfix.c
ntp-4.2.6p5/: build_android_arm.sh
server/boincmods/db/: boinc_db_types.h
server/boincmods/sched/: Makefile.am  handle_request.cpp  sched_config.cpp  sched_config.h  sched_main.cpp  sched_types.cpp  sched_types.h
server/config/: archive-new.sh  backupdb.sh  backupweb.sh  clean_tmpdata.sh  config.xml  continual_config.xml  etc_systemd_system_mysqld.service  gui_urls.xml  httpd.conf  my.cnf  my.cnf.bak  ntp.conf  ntpd.service  php.ini  phpconfig  project_files.xml
server/html/: syncserver  syncserver.local
server/html/continual/inc/: cache.inc  db.inc  db_conn.inc  prefs.inc  util.inc
server/html/continual/project/: cache_parameters.inc  common.inc  project.inc  project_specific_prefs.inc
server/html/continual/user/: edit_host_info_action.php  index.php  maptrig.php
server/html/inc/: cache.inc  db_conn.inc  email.inc  user.inc
server/html/ops/: .htaccess
server/html/project/: bash.env  cache_parameters.inc  common.inc  csh.env  project.inc  project_specific_prefs.inc
server/html/qcn/earthquakes/inc/: csh.env
server/html/user/: create_account_form.php  create_profile.php  earthquake_email.php  edit_host_info_action.php  edit_host_info_form.php  index.php  qcn_mapper.php  qcn_wordpress.css  results.php  show_host_detail.php  trdl.php  trigger.php
server/jfl/: Makefile
server/quake/: parse-usgs-json.py
server/sql/: cleanup_results.sql  dbupdates.sql  do_stats.sql  qcn_schema.sql  stats_archive_trigger.sql  yearweek.sql
server/sql_functions/: Makefile
server/trigdisplay/: Makefile
server/trigger/: README.txt  qcn_trigger.cpp  qcn_trigger.h  qcn_types.h
server/trigger_monitor/: Makefile
server/trigmonitor/: Makefile  QCNMain.cpp  QCNTrigger.cpp
server/workgen/: Makefile  README  continual_template.cpp  howto-gen-work.rst  work.cpp
server/workgen/templates/: qcn_output.xml  qcn_output_continual.xml
zlib-1.2.5/: Makefile  build.mac
(+7 files in other folders)
